<resources>
    <string name="app_name">FirstApp</string>
    <string name="profile">Profile</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="history">History</string>
    <string name="need_help">Need Help?</string>
    <string name="fill_6">About Us</string>
    <string name="logout">Logout</string>
    <string name="follow_us">Follow Us</string>
    <string name="facebook_link">Facebook Link</string>
    <string name="instagram_link">Instagram Link</string>
    <string name="stores">STORES</string>
    <string name="menu">MENU</string>
    <string name="rewards">REWARDS</string>
    <string name="inbox">INBOX</string>
    <string name="more">MORE</string>
    <string name="back">Back</string>
    <string name="store_details">Store Details</string>
    <string name="favourite">Favourite</string>
    <string name="API_KEY">AIzaSyC7bUc_y7vQGcmlQp-C0w_vUATJOjg8moc</string>
    <string name="directions">Directions</string>
    <string name="distance">Distance</string>
    <string name="dummy_distance">8 miles</string>
    <string name="dummy_location_title">Bellastad</string>
    <string name="dummy_location_address">45 McDermott Shores Suite 760</string>
    <string name="united_states_92127">United States - 92127</string>
    <string name="wifi">Wifi</string>
    <string name="parking">Parking</string>
    <string name="store_hours">Store Hours</string>
    <string name="call_store">Call Store</string>
    <string name="order_food">Order Food</string>
    <string name="dummy_day">Wednesday</string>
    <string name="dummy_store_timing">09:00 AM To 10:30 PM</string>
    <string name="arrow_up">Arrow Up</string>
    <string name="swipe_up_to_see_available_offers">Swipe up to see available offers</string>
    <string name="earn">EARN</string>
    <string name="redeem">REDEEM</string>
    <string name="expire_in_3_days">Expire in 3 days</string>
    <string name="free_ramen">Free Ramen!</string>
    <string name="reward_description">When it comes to juice, we go the extra mile to offer you the quality and choice you deserve.</string>

    <string name="verification">Verification</string>
    <string name="please_enter_6_digit_code_sent_on">Please enter 6 digit code sent on</string>
    <string name="mock_mail_id">john@doe.com</string>
    <string name="resend_code"><u>Resend code</u></string>
    <string name="need_help_underlined"><u>Need help?</u></string>
    <string name="proceed">Proceed</string>
    <string name="verify_later_text">You can verify later from your Profile Settings.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_description">Please provide the email associated with the current loyalty club.</string>
    <string name="first_and_last_name">Your first and last name.</string>
    <string name="password_description">Make it hard to crack!</string>
    <string name="submit">Submit</string>
</resources>
