<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_store"
        android:icon="@drawable/stores_active_copy_5"
        android:title="@string/stores" />
    <item
        android:id="@+id/navigation_menu"
        android:icon="@drawable/order_active_copy_4"
        android:title="@string/menu" />
    <item
        android:id="@+id/navigation_rewards"
        android:icon="@drawable/rewards_copy_5"
        android:title="@string/rewards" />
    <item
        android:id="@+id/navigation_inbox"
        android:icon="@drawable/inbox_copy_4"
        android:title="@string/inbox" />
    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/more_copy_4"
        android:title="@string/more" />
</menu>