<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10">

    <include layout="@layout/toolbar" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">

        <fragment
            android:id="@+id/map_fragment"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <android.support.design.button.MaterialButton
            android:id="@+id/store_direction_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="12dp"
            android:text="@string/directions"
            android:textAllCaps="false"
            app:rippleColor="@color/black" />
    </FrameLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:background="@color/black"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:padding="16dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/distance"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/distance_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/dummy_distance"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/location_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/dummy_location_title"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/location_address_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/dummy_location_address"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/location_zip_code_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/united_states_92127"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/text_view_background"
                    android:gravity="center_horizontal"
                    android:paddingLeft="16dp"
                    android:paddingTop="2dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="2dp"
                    android:text="@string/wifi"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="8dp"
                    android:layout_height="match_parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/text_view_background"
                    android:gravity="center_horizontal"
                    android:paddingLeft="16dp"
                    android:paddingTop="2dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="2dp"
                    android:text="@string/parking"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@color/brown_grey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/store_hours"
                android:textSize="18sp"
                android:textStyle="bold" />

            <android.support.v4.view.ViewPager
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginBottom="16dp"
                android:clipToPadding="false"
                android:overScrollMode="never" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <android.support.design.button.MaterialButton
                    android:id="@+id/call_store_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:padding="16dp"
                    android:text="@string/call_store"
                    android:textSize="16sp"
                    app:rippleColor="@color/black"
                    app:strokeColor="@color/white"
                    app:strokeWidth="1dp" />

                <android.support.design.button.MaterialButton
                    android:id="@+id/order_food_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:padding="16dp"
                    android:text="@string/order_food"
                    android:textSize="16sp"
                    app:rippleColor="@color/black"
                    app:strokeColor="@color/white"
                    app:strokeWidth="1dp"
                    tools:ignore="RelativeOverlap" />
            </RelativeLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>