<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".VerificationFragment"
    tools:ignore="RtlSymmetry, RelativeOverlap, ContentDescription">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/verification"
                    android:textAllCaps="true"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/close_verification_fragment_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="8dp"
                    android:src="@drawable/ic_close" />
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/app_bar"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_6_digit_code_sent_on"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mock_mail_id"
            android:textSize="24sp"
            android:textStyle="bold" />

        <com.mukesh.OtpView
            android:id="@+id/otp_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:inputType="number"
            android:layout_marginBottom="32dp"
            android:itemBackground="@color/white"
            android:paddingStart="8dp"
            android:textColor="@color/black"
            app:itemCount="6"
            app:itemRadius="8dp"
            app:itemSpacing="16dp"
            app:viewType="rectangle" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/resend_code_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resend_code"
                android:textColor="@color/rouge" />

            <TextView
                android:id="@+id/need_help_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/need_help_underlined"
                android:textColor="@color/rouge" />
        </RelativeLayout>

        <android.support.design.button.MaterialButton
            android:id="@+id/proceed_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:padding="12dp"
            android:text="@string/proceed"
            android:textSize="18sp"
            app:rippleColor="@color/black"
            app:strokeColor="@color/white"
            app:strokeWidth="1dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify_later_text" />
    </LinearLayout>
</RelativeLayout>