<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/reward_img"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/cover" />

        <TextView
            android:id="@+id/reward_expiration_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/expire_in_3_days"
            android:textColor="@color/rouge"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/reward_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/free_ramen"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="italic|bold" />

        <TextView
            android:id="@+id/reward_description_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/reward_description"
            android:textColor="@color/brown_grey" />

        <android.support.design.button.MaterialButton
            android:id="@+id/redeem_reward_card_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="16dp"
            android:text="@string/redeem"
            android:textStyle="bold" />
    </LinearLayout>
</android.support.v7.widget.CardView>