<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/footer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone">

    <TextView
        android:id="@+id/follow_us_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/follow_us"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/social_links"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/follow_us_tv"
        android:layout_centerInParent="true"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/facebookLinkImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/facebook_link"
            android:padding="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/facebook_follow" />

        <Space
            android:layout_width="24dp"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/instagramLinkImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/instagram_link"
            android:padding="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/instagram_follow" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/social_links" />
</RelativeLayout>