<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="10">

        <GridView
            android:id="@+id/moreDetailsGridView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:clipToPadding="false"
            android:horizontalSpacing="16dp"
            android:numColumns="2"
            android:overScrollMode="never"
            android:padding="16dp"
            android:paddingBottom="24dp"
            android:scrollbars="none"
            android:verticalSpacing="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:text="@string/follow_us"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="80dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/facebookLinkImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/facebook_link"
                android:padding="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/facebook_follow" />

            <Space
                android:layout_width="24dp"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/instagramLinkImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/instagram_link"
                android:padding="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/instagram_follow" />
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
