<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".MigrationFragment">

    <TextView
        style="@style/Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="23dp"
        android:text="Email*" />

    <EditText
        android:id="@+id/email_et"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="2dp"
        android:background="@color/white"
        android:inputType="textEmailAddress"
        android:paddingStart="13dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        tools:text="john@doe.com" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="19dp"
        android:fontFamily="sans-serif"
        android:text="@string/email_description"
        android:textSize="12sp" />

    <TextView
        style="@style/Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="23dp"
        android:text="Name*" />

    <EditText
        android:id="@+id/name_et"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="2dp"
        android:background="@color/white"
        android:inputType="text"
        android:paddingStart="13dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        tools:text="John Doe" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="19dp"
        android:fontFamily="sans-serif"
        android:text="@string/first_and_last_name"
        android:textSize="12sp" />

    <TextView
        style="@style/Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="23dp"
        android:text="Create Password*" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="2dp"
            android:background="@color/white"
            android:inputType="textPassword"
            android:paddingStart="13dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="19dp"
        android:fontFamily="sans-serif"
        android:text="@string/password_description"
        android:textSize="12sp" />

    <android.support.design.button.MaterialButton
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:padding="14dp"
        android:text="@string/submit"
        android:textSize="14sp"
        android:textStyle="bold"
        app:cornerRadius="0dp"
        app:strokeColor="@color/white"
        app:strokeWidth="1dp" />
</LinearLayout>