<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/gridRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:clipToPadding="false"
                android:overScrollMode="never"
                android:scrollbars="none" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/follow_us"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/facebookLinkImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/facebook_link"
                    android:padding="8dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/facebook_follow" />

                <Space
                    android:layout_width="24dp"
                    android:layout_height="match_parent" />

                <ImageView
                    android:id="@+id/instagramLinkImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/instagram_link"
                    android:padding="8dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/instagram_follow" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="80dp" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>